--- a/static/styles/login.scss
+++ b/static/styles/login.scss
@@ -14,6 +14,7 @@
     padding: 25px 75px;
     width: 100%;
     border-radius: 15px;
+    margin-top: 64px;
 
     .logo {
       text-align: center;
