--- a/static/styles/login.scss
+++ b/static/styles/login.scss
@@ -15,6 +15,7 @@
     width: 100%;
     border-radius: 15px;
     margin-top: 64px;
+    margin-bottom: 64px;
 
     .logo {
       text-align: center;
