--- a/components/Navigation/style.scss
+++ b/components/Navigation/style.scss
@@ -22,7 +22,9 @@ $maxWidth: 1033px;
       display: flex;
     }
   }
-
+  .anticon-user{
+    margin-left:5px;
+  }
   .nav-sign {
     display: flex;
     margin-left: 60px;
