--- a/static/styles/index.scss
+++ b/static/styles/index.scss
@@ -1,3 +1,60 @@
+@import './style.scss';
 #__next {
   height: 100%;
+}
+.banner-section{
+  height:calc(100vh - 64px);
+  width:100%;
+  position: relative;
+  overflow: hidden;
+  // background-color:$lightBlue;
+  .img-bottom{
+   bottom:0;
+   position: absolute;
+   left:0;
+    width: calc(100vw + 2px);
+    min-width: 1000px;
+    // width:100%;
+
+  }
+}
+.features-section{
+  padding:1rem 1rem 200px 1rem;
+  background-color: $lightBlue;
+  position: relative;top:-1px;
+  
+}
+.cards {
+  margin-top:40px;
+
+ .card{
+  @media screen and (max-width:$md){
+    flex:0 0 100%;
+    margin-top:30px!important;
+    margin:0;
+  }
+  margin:0 15px;
+  flex:1;
+  
+  box-shadow: 0 0 35px 1px white;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  transition:0.5s ease all;
+  cursor: pointer;
+  &:hover{
+    box-shadow: 0 0 15px 1px black;
+  }
+  h2,p{
+    color:white;
+  } 
+  padding:1rem;
+   &> .ant-row-flex{
+     height:100%;
+     width:100%;
+
+   }
+   height:200px; 
+ }
 }
