--- a/static/styles/login.scss
+++ b/static/styles/login.scss
@@ -1,25 +1,30 @@
 .login-page {
   height: 100%;
+  
   width: 100%;
+  // background-color: whitesmoke;
+  flex-direction: column;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: start;
+  
 
   .login-container {
-    background: #25283f;
+    margin:0 auto;
+    background:white;
+    box-shadow: 0 0 5px 1px lightgray;
     min-height: 500px;
     display: flex;
     flex-direction: column;
-    max-width: 500px;
+    flex: 0 0 500px;
     padding: 25px 75px;
-    width: 100%;
+    width:500px;
     border-radius: 15px;
-    margin-top: 64px;
+    margin-top: 100px;
     margin-bottom: 64px;
 
     .logo {
       text-align: center;
-      margin-bottom: 32px;
+      
     }
 
     .ant-form-item-label > label {
